remove personal information

--- a/Main_Control_3-29/.env
+++ b/Main_Control_3-29/.env
@@ -1,4 +1,4 @@
-PYTHON_PUBNUB_PUBLISH_KEY=pub-c-e478cfb1-92ef-4faa-93cc-d1c4022ecb19
-PYTHON_PUBNUB_SUBSCRIBE_KEY=sub-c-a6797b99-e665-4db1-b0ec-2cb77ad995ed
-PYTHON_PUBNUB_CHANNEL=MingyiHUO728
-PYTHON_PUBNUB_UUID=321
+PYTHON_PUBNUB_PUBLISH_KEY=
+PYTHON_PUBNUB_SUBSCRIBE_KEY=
+PYTHON_PUBNUB_CHANNEL=
+PYTHON_PUBNUB_UUID=
